# airflow

./: hello.py  requirements.in  requirements.txt  uv.cmd  uv.list
app/core/: utility.py
app/emails/: base_email.py  gmail.py
app/orm/: __init__.py
app/orm/models/: app_scopes.py  app_tokens.py  base_temporal.py  base_temporal_details.py  base_temporal_update.py  booking.py  busy_slots.py  cities.py  clients.py  contact_assoc.py  contact_master.py  contacts.py  countries.py  country_states.py  events.py  lead_journey.py  location_hours.py  locations.py  schedule.py  scopes.py  service_requests.py  session_tokens.py  staff.py  staff_locations.py  token_scopes.py  tracking_email.py
app/services/: contact.py  location.py  schedule.py  service_locator.py
app/services/emails/: gmail.py  outlook.py
app/tasks/: __init__.py  email_track.py  post_event.py
dags/: entry_point.py
dags/emails/: test_tracking_dag.py  tracking_dag.py
dags/tests/: example_dag.py
include/emails/: gmail.py  parse_email.py  raw_email.py
include/sql/: base_temporal.py  base_temporal_details.py
include/sql/tables/: contact_assoc.py  contact_master.py  contacts.py  events.py  lead_journey.py  locations.py  tracking_email.py
include/tasks/: email_track.py  post_event.py
packs/lead-tracker/: pyproject.toml
packs/lead-tracker/src/lead_tracker/: __init__.py
schema/: lead_tracker.sql
